SAKAI-5105 Fix lti item icon alignment

--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -615,7 +615,7 @@ div.layout-option > div {
 }
 .listType .link-div .fa-item-text {
     display:inline-block;
-    vertical-align: text-top;
+    vertical-align: text-bottom;
 }
 
 
